fix: prevent exit intent on mobile, fix overflow and douple-tap to zoom

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
   border: none;
   border-radius: 0;
   scrollbar-width: none;
+  touch-action: manipulation; /* Prevent double-tap to zoom */
 }
 
 /* Container base styles */
